# gui

./: .gitignore  .origins.cpp.swp  .origins.h.swp  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  README.md  astar.cpp  bf.cpp  encrypt.cpp  encryption.cpp  g++.flags  gtags.files  imgs.cpp  imgui  imgui.ini  imgui_config.h  main  main.cpp  main.h  main.hpp  origins.cpp  origins.h  origins.hpp  plan  rezip  tetris.cpp  update  utils.cpp
objdir/: update
tetris/: block_states.hpp  impl.hpp
